tests/compile_fail/variance_check.stderr
error[E0597]: `foo` does not live long enough
  --> tests/compile_fail/variance_check.rs:27:16
   |
27 |     x.set(Some(&foo));
   |                ^^^^ borrowed value does not live long enough
28 | }
   | -
   | |
   | `foo` dropped here while still borrowed
   | borrow might be used here, when `foo` is dropped and runs the destructor for type `Cell<Foo<'_>>`
